# shogi-for-crabs

./: Cargo.toml  LICENSE  README.md
reference/: apery.txt  debug.txt  sfen.txt  shogi.txt
src/: board.rs  image_resources.rs  joystick.ino  joystick.rs  main.rs  piece.rs  piece_button.rs  port.rs  position.rs  shogi_game.rs  test.rs
